--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "@react-three/fiber": "^9.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "isbot": "^5.1.27",
+    "lucide-react": "^0.541.0",
+    "pdfjs-dist": "^5.4.54",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-dropzone": "^14.3.8",
+    "react-router": "^7.7.1",
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.179.1",
+    "vanta": "^0.5.24",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
@@ -22,7 +34,9 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/three": "^0.179.0",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
